--- a/views/login.pug
+++ b/views/login.pug
@@ -1,18 +1,22 @@
 doctype html
-html(lang='en')
+html(lang='en').w3-light-grey
   head
     title Books
+    link(rel='stylesheet', href='https://www.w3schools.com/w3css/4/w3.css')
   body
-    h1 Login
     #messages
     if messages.error
       p= messages.error
-    form(action='/login', method='POST')
-      div
-        label(for='email') Email
-        input#email(type='email', name='email', required='')
-      div
-        label(for='password') Password
-        input#password(type='password', name='password', required='')
-      button(type='submit') Login
-    a(href='/register') Register
+    form.w3-display-container.w3-display-middle(action='/login', method='POST')
+      div.w3-padding-32
+        h1.w3-text-blue Login
+        div
+          label.w3-text-blue(for='email') Email
+              input.w3-input.w3-border#email(type='email', name='email', required='')
+        br
+        div
+          label.w3-text-blue(for='password') Password
+              input.w3-input.w3-border#password(type='password', name='password', required='')
+        br
+        button.w3-button.w3-green(type='submit', style='width: 100%') Sign In
+        a.w3-button.w3-blue.w3-right.w3-margin-top(href='/register', style='width: 100%') Sign Up
